environments/prd/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth-service-prd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8001"
        prometheus.io/path: "/metrics"
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: auth-service
          image: toggleacrfase4.azurecr.io/auth-service:20843ca
          ports:
            - containerPort: 8001
